# rfkit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Caddyfile  README.md  generate_index_html.py  partitions.csv  platformio.ini  pre_build.py  sdkconfig
components/arduino_json/: CMakeLists.txt
components/core_version/: core_version.h
components/homespan/: CMakeLists.txt
components/rc_switch/: CMakeLists.txt
main/: CMakeLists.txt  config.cxx  config.h  config.hxx  crc32.cxx  crc32.hxx  gpio.cxx  guard.hxx  homespan.cxx  homespan.hxx  lock.hxx  main.cxx  persistence.cxx  persistence.hxx  rc.cxx  rc.hxx  server.cxx  service.cxx  service.hxx
src/: Config.cpp  Config.h  Lock.cpp  config.cpp  config.h  config.hxx  gpio.hxx  homespan.cpp  index_html.h  lock.cpp  lock.hxx  main.cpp  rc.cxx  server.cpp  server.h  server.hxx  service.hxx
web/: index.html  package.json  rollup.config.js  tsconfig.json
web/src/: effect.ts  index.tsx  override.d.ts  status-check.ts  styles.css  util.ts  validator.ts
web/src/component/: app.tsx  backdrop.tsx  container.tsx  editor.tsx  error.tsx  input.tsx  loader.tsx  number-input.tsx  overlay.tsx  status-display.tsx  switch.tsx
web/src/component/scss/: app.scss  backdrop.scss  container.scss  editor.scss  error.scss  input.scss  loader.scss  status-display.scss  switch.scss
web/src/state/: action.ts  config.ts  reducer.ts  state-api.ts  state.ts
